# tracker2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20251028_145500_create_core_tables.py
app/: main.py
app/api/v1/: endpoints.py  ping.py  router.py
app/core/: lifespan.py  logging.py  security.py  settings.py
app/db/: base.py  seed.py  session.py
app/models/: __init__.py  _mixins.py  client.py  hardware.py  inventory.py  ticket.py
app/ui/: router.py
app/ui/templates/: base.html  home.html
docker/: Dockerfile
tests/: test_health.py
