[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker2"
version = "0.1.0"
description = "Tracker2 — FastAPI + Postgres + Jinja (port 9444)"
requires-python = ">=3.11"
authors = [{ name = "Aaron Turner" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "gunicorn>=22.0",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9; platform_system != 'Windows'",
  "psycopg>=3.2; platform_system == 'Windows'",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.27",
  "structlog>=24.1",
  "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "factory_boy>=3.3",
  "mypy>=1.11",
  "ruff>=0.6",
  "black>=24.8",
  "bandit>=1.7",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","ASYNC","Q","C90"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
